--- a/expences/templates/exp/admin.html
+++ b/expences/templates/exp/admin.html
@@ -7,11 +7,13 @@
   <script type="text/javascript" src= "{%static '/react.js'%}"></script>
   <script type="text/javascript" src= "{%static '/react-dom.js'%}"></script>
   <script type="text/javascript" src= "{%static '/expadmin.js'%}"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
   <!--link rel="stylesheet" href="/css/expences.css" /-->
 </head>
 <body onload='load()' >
 
-  <div id="area">
+  <div id="area" class="container">
 
   </div>
 
