--- a/expences/templates/exp/expences.html
+++ b/expences/templates/exp/expences.html
@@ -6,40 +6,19 @@
   {% load static %}
   <!--script type="text/javascript" src= "jquery.js"></script>
   <script type="text/javascript" src= "expences.js"></script-->
+  <!--script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/reactstrap/4.8.0/reactstrap.min.js"/-->
+
   <script type="text/javascript" src= "{%static '/react.js'%}"></script>
   <script type="text/javascript" src= "{%static '/react-dom.js'%}"></script>
   <!--script type="text/javascript" src= "{%static '/jquery.js'%}"></script-->
   <script type="text/javascript" src= "{%static '/expences.js'%}"></script>
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <!--link rel="stylesheet" href="/css/expences.css" /-->
 </head>
 <body onload='load()' >
 
-  <!--div id="menu">
-    <input type='button' onclick='show_form("expence")' value='single record'></input>
-    <input type='button' onclick='requestTable();' value='table view'></input>
-  </div>
-  <div id="expence">
-		<form id='singleform'>
-		<input type='reset' value='clear form'>
-		<table>
-			<tr><td>category</td><td><select id='category' name='category'></select></td></tr>
-			<tr><td>sum</td><td><input type='text' min=0 name='summ'>                       </td></tr>
-			<tr><td>descr</td><td><input type='text' name='description'>              </td></tr>
-			<tr><td>date</td><td><input type='date' name='exptime'>                   </td></tr>
-			<tr><td>currency</td><td><select id='currency' name='currency'></select></td></tr>
-			<tr><td>location</td><td><select id='location' name='location'></select></td></tr>
-		
-			<tr><td><input type='button' onclick='save("expence")' value='save'></td>
-			<td><input type='checkbox' name='is_approx'> approx value
-			<br><input type='radio' name='is_expence' value='expense' checked> expense
-			<br><input type='radio' name='is_expence' value='income'> income</td></tr>
-		</table>
-		<input type='hidden' name='id'>
-		</form>
-  </div-->
-  <div id="area">
-
+  <div id="area" class='container'>
   </div>
 
 </body>
