Charts added to statView Charts onclick logged to console

--- a/expences/templates/exp/expences.html
+++ b/expences/templates/exp/expences.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src= "{%static '/react.js'%}"></script>
   <script type="text/javascript" src= "{%static '/react-dom.js'%}"></script>
   <script src="https://vega.github.io/vega/vega.js"></script>
+  <script type="text/javascript" src= "{%static '/mylib.js'%}"></script>
   <script type="text/javascript" src= "{%static '/expences.js'%}"></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
