vega config moved to mylib charts reordered yearly statistics added bootstrap applied to all pages

--- a/expences/templates/registration/login.html
+++ b/expences/templates/registration/login.html
@@ -1,7 +1,17 @@
-<h2>Login</h2>
+<!-- -*- encoding:utf-8-*--->
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
+<body>
+
+<h2>Login aaa</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Login</button>
   <p><a href="{% url 'register' %}">register</a></p>
 </form>
+</body></html>
