--- a/aaa/templates/aaa/index.html
+++ b/aaa/templates/aaa/index.html
@@ -6,10 +6,11 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
     <script type="application/javascript" src="{% static '/aaa.js'%}"></script>
+    <link 
   </head>
   <body>
     <div id="manage"><p><a href="{% url 'logout' %}">logout</a></p></div>
-    <div id="root">qwerty</div>
+    <div id="root"></div>
     <script type="text/babel">
       requestUsers();
     </script>
