--- a/aaa/templates/aaa/login.html
+++ b/aaa/templates/aaa/login.html
@@ -1,6 +1,18 @@
-<h2>Login</h2>
+<html>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
+<body>
+<div class='container'>
+<div class='row'>
+  <div class='col-12'>
+    <h2>Login</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Login</button>
 </form>
+</div></div></div>
+</body>
+</html>
