--- a/aaa/templates/registration/login.html
+++ b/aaa/templates/registration/login.html
@@ -1,7 +1,19 @@
-<h2>Login</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Login</button>
-  <p><a href="{% url 'register' %}">register</a></p>
-</form>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class='container'>
+      <div class='row'>
+	<div class='col-12 col-sm-6'>
+	  <h1>Login</h1><br>
+	  <form method="post">
+	    {% csrf_token %}
+	    {{ form.as_p }}
+	    <p class='mt-3'> <button type="submit">Login</button>
+	    <a class='float-right' href="{% url 'register' %}">register</a></p>
+	  </form>
+    </div></div></div>
+  </body>
+</html>
