--- a/expences/templates/exp/expences.html
+++ b/expences/templates/exp/expences.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   {% load static %}
-  <!--script type="text/javascript" src= "jquery.js"></script>
-  <script type="text/javascript" src= "expences.js"></script-->
+  <!--script type="text/javascript" src= "expences.js"></script-->
   <!--script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/reactstrap/4.8.0/reactstrap.min.js"/-->
 
   <script type="text/javascript" src= "{%static '/react.js'%}"></script>
   <script type="text/javascript" src= "{%static '/react-dom.js'%}"></script>
   <script src="https://vega.github.io/vega/vega.js"></script>
   <script type="text/javascript" src= "{%static '/mylib.js'%}"></script>
+  <script type="text/javascript" src= "{%static '/react-table.js'%}"></script>
   <script type="text/javascript" src= "{%static '/expences.js'%}"></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
